--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,8 +5,6 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <div id="app">
-      <h1>Hello World!</h1>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
