--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,7 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Spottr - Get Started</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="../src/styles/global.css">
+    <style>
+        #app {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+        }
+    </style>
   </head>
   <body>
     <div id="app"></div>
