--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,18 +6,8 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../src/styles/global.css">
-    <style>
-        #app {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #fff;
-        }
-    </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="app-container"></div>
   </body>
 </html>
